link indicator comments for using a tailwindcss and the phosphor icons

--- a/public/services.html
+++ b/public/services.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Services</title>
+  <!-- TAILWINDCSS LINK -->
   <link rel="stylesheet" href="/css/output.css">
+  <!-- PHOSPHOR ICONS LINK -->
   <link rel="stylesheet" href="/phosphor/regular/style.css">
 </head>
 <body class="bg-black min-h-screen text-white">
