--- a/src/features/auth/signup.html
+++ b/src/features/auth/signup.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=DM+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-  <link rel="stylesheet" href="auth.css">
+  <link rel="stylesheet" href="/auth/auth.css">
 </head>
 <body>
   <div class="bg-grid"></div>
@@ -131,12 +131,12 @@
         </form>
 
         <div class="form-footer">
-          <p>Already have an account? <a href="login.html">Sign in</a></p>
+          <p>Already have an account? <a href="/auth/login">Sign in</a></p>
         </div>
       </div>
     </div>
   </div>
 
-  <script src="auth.js"></script>
+  <script src="/auth/auth.js"></script>
 </body>
 </html>
