--- a/src/features/services/services.html
+++ b/src/features/services/services.html
@@ -64,7 +64,7 @@
         container.innerHTML = '';
         data.data.forEach((service, i) => {
           const card = document.createElement('div');
-          card.className = 'service-card animate-card bg-white/5 border border-white/10 rounded-2xl overflow-hidden hover:border-red-500 hover:-translate-y-1 transition-all duration-300 cursor-pointer group relative';
+          card.className = 'service-card animate-card bg-white/5 border border-white/10 rounded-2xl overflow-hidden hover:border-red-500 hover:-translate-y-1 transition-all duration-300 cursor-default group relative';
           card.style.animationDelay = `${i * 0.1}s`;
           card.innerHTML = /* html */`
             <div class="card-img-wrap relative overflow-hidden">
@@ -95,6 +95,9 @@
             </div>
           `;
           container.appendChild(card);
+          card.querySelector('.book-btn').addEventListener('click', () => {
+            window.location.href = `/booking/${service.id}`;
+          });
         });
       });
   </script>
