WIP bookings feature has cron jobs for status update for expired and cleanups for expired, and now working email booking confirmation
use brevo for the email integration contianing bookingdetials summary and now wil about to implement qr

--- a/src/features/bookings/booking-success.html
+++ b/src/features/bookings/booking-success.html
@@ -9,7 +9,6 @@
 </head>
 <body class="bg-[#0a0a0a] min-h-screen text-white overflow-x-hidden">
 
-  <!-- Header -->
   <header class="border-b border-white/10 px-6 py-5 flex items-center gap-3 relative z-10 animate-slideDown">
     <h1
       class="text-2xl tracking-widest uppercase font-bold bg-gradient-to-r from-white to-white/40 bg-clip-text text-transparent"
@@ -18,7 +17,6 @@
     </h1>
   </header>
 
-  <!-- Main -->
   <main class="max-w-xl mx-auto px-6 py-16 relative z-10 flex flex-col items-center text-center animate-fadeUp">
 
     <!-- Success Icon -->
@@ -26,20 +24,72 @@
       <div class="w-24 h-24 rounded-full bg-green-500/10 border border-green-500/20 flex items-center justify-center">
         <i class="ph ph-check-circle text-green-400 text-5xl"></i>
       </div>
-      <!-- Glow -->
       <div class="absolute inset-0 rounded-full bg-green-500/10 blur-xl"></div>
     </div>
 
-    <!-- Heading -->
     <p class="text-green-400 text-xs uppercase tracking-widest mb-2">Payment Confirmed</p>
     <h2 class="text-5xl font-bold mb-3 tracking-wide" style="font-family:'Bebas Neue',sans-serif;">
       You're All Set!
     </h2>
     <p class="text-white/40 text-sm mb-10 leading-relaxed max-w-sm">
-      Your booking has been confirmed. Check your email for the booking details and your queue number.
+      Your booking has been confirmed. Details below and a copy has been sent to your email.
     </p>
 
-    <!-- Info Card -->
+    <!-- Booking Details Card (hidden until loaded) -->
+    <div id="bookingCard" class="w-full bg-white/5 border border-white/10 rounded-2xl p-6 mb-8 text-left hidden">
+      <p class="text-xs text-white/30 uppercase tracking-widest mb-4">Booking Details</p>
+      <div class="flex flex-col gap-4">
+
+        <div class="flex justify-between items-center border-b border-white/5 pb-4">
+          <span class="text-xs text-white/40">Reference Code</span>
+          <span id="referenceCode" class="text-sm font-bold text-white tracking-widest"></span>
+        </div>
+
+        <div class="flex justify-between items-center border-b border-white/5 pb-4">
+          <span class="text-xs text-white/40">Queue Number</span>
+          <span id="queueNumber" class="text-sm font-bold text-white"></span>
+        </div>
+
+        <div class="flex justify-between items-center border-b border-white/5 pb-4">
+          <span class="text-xs text-white/40">Service</span>
+          <span id="serviceName" class="text-sm text-white text-right max-w-[60%]"></span>
+        </div>
+
+        <div class="flex justify-between items-center border-b border-white/5 pb-4">
+          <span class="text-xs text-white/40">Date</span>
+          <span id="bookingDate" class="text-sm text-white"></span>
+        </div>
+
+        <div class="flex justify-between items-center border-b border-white/5 pb-4">
+          <span class="text-xs text-white/40">Name</span>
+          <span id="guestName" class="text-sm text-white"></span>
+        </div>
+
+        <div class="flex justify-between items-center border-b border-white/5 pb-4">
+          <span class="text-xs text-white/40">Amount Paid</span>
+          <span id="amountPaid" class="text-sm font-bold text-green-400"></span>
+        </div>
+
+        <div id="remainingRow" class="justify-between items-center hidden">
+          <span class="text-xs text-white/40">Remaining Balance</span>
+          <span id="remainingBalance" class="text-sm font-bold text-yellow-400"></span>
+        </div>
+
+      </div>
+    </div>
+
+    <!-- Loading state -->
+    <div id="loadingCard"
+      class="w-full bg-white/5 border border-white/10 rounded-2xl p-6 mb-8 flex items-center justify-center">
+      <p class="text-white/30 text-sm animate-pulse">Loading booking details...</p>
+    </div>
+
+    <!-- Error state -->
+    <div id="errorCard" class="w-full bg-red-500/5 border border-red-500/20 rounded-2xl p-6 mb-8 text-center hidden">
+      <p class="text-red-400 text-sm">Could not load booking details. Please check your email for confirmation.</p>
+    </div>
+
+    <!-- What's Next -->
     <div class="w-full bg-white/5 border border-white/10 rounded-2xl p-6 mb-8 text-left">
       <p class="text-xs text-white/30 uppercase tracking-widest mb-4">What's Next</p>
       <div class="flex flex-col gap-4">
@@ -79,7 +129,6 @@
       </div>
     </div>
 
-    <!-- Actions -->
     <div class="flex flex-col gap-3 w-full">
       <a href="/services"
         class="cursor-pointer w-full bg-red-600 hover:bg-red-700 active:scale-95 text-white font-semibold py-3 rounded-xl transition-all duration-200 flex items-center justify-center gap-2">
@@ -89,6 +138,51 @@
     </div>
 
   </main>
+
+  <script>
+    const params = new URLSearchParams(window.location.search);
+    const externalId = params.get('external_id');
+
+    async function loadBookingDetails() {
+      if (!externalId) {
+        document.getElementById('loadingCard').classList.add('hidden');
+        document.getElementById('errorCard').classList.remove('hidden');
+        return;
+      }
+
+      try {
+        const res = await fetch(`/booking/details?external_id=${externalId}`);
+        const data = await res.json();
+
+        if (!data.success) throw new Error(data.message);
+
+        const b = data.data;
+
+        document.getElementById('referenceCode').textContent = b.reference_code;
+        document.getElementById('queueNumber').textContent = `#${b.queue_number}`;
+        document.getElementById('serviceName').textContent = b.variant_name ? `${b.service_name} - ${b.variant_name}` : b.service_name;
+        document.getElementById('bookingDate').textContent = new Date(b.booking_date).toLocaleDateString('en-PH', { year: 'numeric', month: 'long', day: 'numeric' });
+        document.getElementById('guestName').textContent = b.guest_name;
+        document.getElementById('amountPaid').textContent = `₱${parseFloat(b.amount_paid).toLocaleString('en-PH', { minimumFractionDigits: 2 })}`;
+
+        if (!b.is_fully_paid && b.remaining_balance > 0) {
+          document.getElementById('remainingRow').classList.remove('hidden');
+          document.getElementById('remainingRow').classList.add('flex');
+          document.getElementById('remainingBalance').textContent = `₱${parseFloat(b.remaining_balance).toLocaleString('en-PH', { minimumFractionDigits: 2 })}`;
+        }
+
+        document.getElementById('loadingCard').classList.add('hidden');
+        document.getElementById('bookingCard').classList.remove('hidden');
+
+      } catch (err) {
+        console.error(err);
+        document.getElementById('loadingCard').classList.add('hidden');
+        document.getElementById('errorCard').classList.remove('hidden');
+      }
+    }
+
+    loadBookingDetails();
+  </script>
 
 </body>
 </html>
