done feature bookings with all right integration, email, payment, qr
ONLY NEED TO NOTE IS CHANGE the qr from reference code to url+refrence code to redirect the staff

--- a/src/features/bookings/booking-failed.html
+++ b/src/features/bookings/booking-failed.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Payment Failed</title>
   <link rel="stylesheet" href="/css/output.css">
   <link rel="stylesheet" href="/styles/custom.css">
@@ -10,7 +11,8 @@
 <body class="bg-[#0a0a0a] min-h-screen text-white overflow-x-hidden">
 
   <!-- Header -->
-  <header class="border-b border-white/10 px-6 py-5 flex items-center gap-3 relative z-10 animate-slideDown">
+  <header
+    class="sticky top-0 z-50 border-b border-white/10 px-4 sm:px-6 py-4 sm:py-5 flex items-center gap-3 animate-slideDown bg-[#0a0a0a]">
     <h1
       class="text-2xl tracking-widest uppercase font-bold bg-gradient-to-r from-white to-white/40 bg-clip-text text-transparent"
       style="font-family:'Bebas Neue',sans-serif;">
